Wed Mar 10 16:12:21 2010  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (rb_f_loop): Return an enumerator if no block is given.

Tue Mar  9 22:58:59 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_config.c: defined own IMPLEMENT_LHASH_DOALL_ARG_FN_098
	  macro according to IMPLEMENT_LHASH_DOALL_ARG_FN in OpenSSL 0.9.8m.
	  OpenSSL 1.0.0beta5 has a slightly different definiton so it could
	  be a temporal workaround for 0.9.8 and 1.0.0 dual support.

	* ext/openssl/ossl_pkcs5.c (ossl_pkcs5_pbkdf2_hmac): follows function
	  definition in OpenSSL 1.0.0beta5. PKCS5_PBKDF2_HMAC is from 1.0.0
	  (0.9.8 only has PKCS5_PBKDF2_HMAC_SHA1)

	* ext/openssl/ossl_ssl_session.c (ossl_ssl_session_eq): do not use
	  SSL_SESSION_cmp and implement equality func by ousrself.  See the
	  comment.

Mon Mar  8 14:58:42 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl_session.c
	  (ossl_ssl_session_{get,set}_time{,out}): fixed a bug introduced by
	  backporting. (see [ruby-dev:40573])  use long in according to
	  OpenSSL API. (SSL_SESSION_{get,set}_time{,out})

Sun Mar  7 06:47:05 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_x509name.c: added X509::Name#hash_old as a wrapper
	  for X509_NAME_hash_old in OpenSSL 1.0.0.

	* test/openssl/test_x509name.rb (test_hash): make test pass with
	  OpenSSL 1.0.0.

Sun Mar  7 06:45:58 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/openssl/test_x509*: make tests pass with OpenSSL 1.0.0b5.
	  * PKey::PKey#verify raises an exception when a given PKey does not
	    match with signature.
	  * PKey::DSA#sign accepts SHA1, SHA256 other than DSS1.

Sun Mar  7 06:41:59 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* backport the commit from trunk:
	  Sun Feb 28 11:49:35 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* openssl/ossl.c (OSSL_IMPL_SK2ARY): for OpenSSL 1.0.
	  patched by Jeroen van Meeuwen at [ruby-core:25210]
	  fixed by Nobuyoshi Nakada [ruby-core:25238],