@@ -1,3 +1,7 @@
+Sat Mar 13 10:03:52 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/extconf.rb: fix [Bug #2840] Tk doesn't built in mingw.
+
 Wed Mar 10 16:12:21 2010  Akinori MUSHA  <knu@iDaemons.org>
 
 	* eval.c (rb_f_loop): Return an enumerator if no block is given.
